# rust-selfhost-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  docker-build.yml
src/: config.rs  db.rs  main.rs
traefik/: dynamic.yml  traefik.yml
